<resources>
    <string name="app_name">Cards</string>
    <string name="question_text" translatable="false">Tree</string>
    <string name="answer_button_text">Check answer</string>
    <string name="help">Help</string>
    <string name="answer_text" translatable="false">Árbol</string>
    <string name="easy_button_title">Easy</string>
    <string name="doubt_button_title">Doubt</string>
    <string name="difficult_button_title">Difficult</string>
</resources>