<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="card"
            type="com.example.cards.Card" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/question_text_view"
            android:text="@{card.question}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            tools:text="Texto para el entorno"/>

        <TextView
            android:id="@+id/answer_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator_view"
            android:layout_centerHorizontal="true"
            android:text="@{card.answer}"
            android:textSize="20sp"
            android:visibility="@{card.answered ? View.VISIBLE : View.INVISIBLE}"/>


        <Button
            android:id="@+id/answer_button"
            android:layout_below="@id/answer_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_button_text"
            android:visibility="@{card.answered ? View.INVISIBLE : View.VISIBLE}"/>
        <View
            android:id="@+id/separator_view"
            android:layout_below="@id/question_text_view"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_height="1dp"
            android:visibility="@{card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:id="@+id/difficultyButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="@{card.answered ? View.VISIBLE : View.INVISIBLE}"
            android:gravity="center">

            <Button
                android:id="@+id/difficult_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:insetRight="9dp"
                android:text="@string/difficult_button_title"
                android:onClick="@{() -> card.update_difficult()}" />

            <Button
                android:id="@+id/doubt_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_blue_light"
                android:insetRight="9dp"
                android:text="@string/doubt_button_title"
                android:onClick="@{() -> card.update_doubt()}" />

            <Button
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/easy_button_title"
                android:onClick="@{() -> card.update_easy()}" />


        </LinearLayout>

    </RelativeLayout>
</layout>